load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "k8s.io/release/cmd/rnctl",
    visibility = ["//visibility:private"],
    deps = [
        "//vendor/github.com/pkg/errors:go_default_library",
        "//vendor/github.com/urfave/cli:go_default_library",
        "//vendor/gopkg.in/cheggaaa/pb.v1:go_default_library",
    ],
)

go_binary(
    name = "rnctl",
    importpath = "k8s.io/release/cmd/rnctl",
    library = ":go_default_library",
    visibility = ["//visibility:public"],
)
